@@ -28,7 +28,7 @@ homepage                                         = https://github.com/Ovid/moose
 ; friends which were released in 2014!
 [Prereqs]
 Type::Tiny          = 1.012004                            ; minimum safe version
-B::Hooks::AtRuntime = 3                                   ; minimum safe version
+B::Hooks::AtRuntime = 7                                   ; minimum safe version
 true                = 1.0.2                               ; minimum safe version
 Perl::Critic::Policy::Moose::ProhibitMultipleWiths = 0    ; for xt tests
 Perl::Critic::Policy::Moose::RequireMakeImmutable  = 0    ; for xt tests
